classDiagram

class User {
  +int user_id
  +uuid public_uuid
  +string username
  +string email
  +string lang_pref
  +boolean active
}

class AuthAccount {
  +int auth_account_id
  +string provider
  +string email_login
  +string password_hash
  +boolean active
}

class Role {
  +int role_id
  +string role_name
  +boolean active
}

class UserRole {
  +int user_id
  +int role_id
  +datetime assigned_at
  +boolean active
}

class ProProfile {
  +int pro_profile_id
  +string display_name
  +text bio
  +string phone_contact
  +string location_text
  +boolean visible
  +boolean verified
  +string status
}

class Service {
  +int service_id
  +string service_name
  +text description
  +int duration_min
  +decimal base_price
  +string currency_code
  +boolean active
}

class Schedule {
  +int schedule_id
  +int weekday
  +time start_time
  +time end_time
  +int slot_duration_min
  +boolean active
}

class Booking {
  +int booking_id
  +datetime booking_start
  +datetime booking_end
  +decimal price_total
  +string status
  +confirm()
  +cancel()
}

class BookingHistory {
  +int booking_history_id
  +string status
  +text note
  +datetime changed_at
}

User "1" --> "0..*" AuthAccount : authenticates_with
User "1" --> "0..*" UserRole : has
Role "1" --> "0..*" UserRole : defines
User "1" --> "0..1" ProProfile : may_have
ProProfile "1" --> "0..*" Service : offers
ProProfile "1" --> "0..*" Schedule : defines
User "1" --> "0..*" Booking : creates_as_client
ProProfile "1" --> "0..*" Booking : receives
Service "1" --> "0..*" Booking : selected_in
Booking "1" --> "0..*" BookingHistory : tracks
